--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
       </div>
       
       <div class="controls">
-        <button class="btn" onclick="startQuiz()">
+        <button class="btn" onclick="startquiz()">
           <i class="fas fa-play" style="margin-right: 10px;"></i> Begin Quiz
         </button>
       </div>
