--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
     }
 
     // Start quiz - FIXED: lowercase 'q'
-    function startQuiz() {
+    function startquiz() {
       startScreen.classList.remove('active');
       quizScreen.classList.add('active');
       loadQuestion();
