--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
       </div>
       
       <div class="controls">
-        <button class="btn" onclick="startquiz()">
+        <button class="btn" onclick="startQuiz()">
           <i class="fas fa-play" style="margin-right: 10px;"></i> Begin Quiz
         </button>
       </div>
@@ -719,7 +719,7 @@
     }
 
     // Start quiz - FIXED: lowercase 'q'
-    function startquiz() {
+    function startQuiz() {
       startScreen.classList.remove('active');
       quizScreen.classList.add('active');
       loadQuestion();
