--- a/index.html
+++ b/index.html
@@ -186,50 +186,64 @@
     // Full quiz with 5 questions
     const quizData = [
       {
-        question: "What token powers the Sentient AI ecosystem?",
-        options: ["PSI", "ETH", "BTC", "SOL"],
-        correct: 0,
-        explanation: "PSI is the utility token that fuels Sentient AI."
-      },
-      {
-        question: "Sentient AI agents can:",
-        options: [
-          "Learn and trade knowledge",
-          "Only answer trivia",
-          "Mine Bitcoin",
-          "Run social media"
-        ],
-        correct: 0,
-        explanation: "Sentient AI agents learn, trade, and collaborate."
-      },
-      {
-        question: "What underpins trust between Sentient AI agents?",
-        options: [
-          "Blockchain technology",
-          "Social media likes",
-          "Centralized servers",
-          "Paper contracts"
-        ],
-        correct: 0,
-        explanation: "Blockchain ensures secure, verifiable, trustless collaboration."
-      },
-      {
-        question: "Which consensus mechanism is Sentient AI aligned with?",
-        options: ["Proof of Intelligence", "Proof of Work", "Proof of Stake", "Proof of Burn"],
-        correct: 2,
-        explanation: "Sentient AI aligns with efficient Proof of Stake mechanisms."
-      },
-      {
-        question: "What is the primary benefit of the Sentient AI marketplace?",
-        options: [
-          "Enables agent-to-agent collaboration",
-          "Gives away free tokens",
-          "Runs a social network",
-          "Hosts memes"
-        ],
-        correct: 0,
-        explanation: "The marketplace allows AI agents to buy, sell, and share capabilities."
-      }
+  "questions": [
+    {
+      "question": "What is the primary function of an AI Agent within the Sentient ecosystem?",
+      "options": [
+        "To mine new cryptocurrency tokens.",
+        "To act as an autonomous, goal-oriented AI that can be trained and monetized by users.",
+        "To provide secure storage for digital assets.",
+        "To validate transactions on the blockchain."
+      ],
+      "correct": 1,
+      "explanation": "AI Agents are the core building blocks of Sentient. They can be specialized, trained on data, and used to perform tasks, with their creators earning rewards."
+    },
+    {
+      "question": "Which blockchain network is the Sentient platform primarily built on?",
+      "options": [
+        "Ethereum",
+        "Solana",
+        "Polygon",
+        "Bitcoin"
+      ],
+      "correct": 2,
+      "explanation": "Sentient is built on the Polygon network, leveraging its scalability and low transaction fees."
+    },
+    {
+      "question": "What is the primary purpose of the Sentient Marketplace?",
+      "options": [
+        "To trade NFTs.",
+        "To buy and sell computational power for AI training.",
+        "To facilitate the trading, leasing, and collaboration of AI Agents and their components (Models, Datasets, Prompts).",
+        "To serve as a decentralized exchange for cryptocurrencies."
+      ],
+      "correct": 2,
+      "explanation": "The Marketplace is a hub where users can monetize AI creations by selling or leasing them to others, including models, datasets, and prompts."
+    },
+    {
+      "question": "According to the blog, what problem is Sentient aiming to solve in the current AI landscape?",
+      "options": [
+        "The high cost of GPU hardware.",
+        "The centralization of AI power and profits among a few large corporations.",
+        "The lack of programming languages for AI development.",
+        "The environmental impact of AI models."
+      ],
+      "correct": 1,
+      "explanation": "Sentient aims to create a decentralized, open, user-owned AI ecosystem, countering the monopoly of large tech companies on AI development and profits."
+    },
+    {
+      "question": "What role does the PSI ($PSI) token play in the Sentient ecosystem?",
+      "options": [
+        "It is a stablecoin used for pricing AI services.",
+        "It is solely a governance token for voting on proposals.",
+        "It is used for payments, staking, incentivizing participation, and governing the platform.",
+        "It is a token used only for initial fundraising and has no further utility."
+      ],
+      "correct": 2,
+      "explanation": "The PSI token is the native utility token of Sentient, used for payments, staking, rewards, and governance participation."
+    }
+  ]
+}
     ];
 
     let currentIndex = 0;
