--- a/index.html
+++ b/index.html
@@ -11,157 +11,36 @@
       --primary: #00f3ff;
       --darker: #05071e;
     }
-
-    body {
-      margin: 0;
-      font-family: 'Exo 2', sans-serif;
-      background: #05071e;
-      color: #fff;
-      overflow: hidden;
-    }
-
-    /* Background canvas */
-    .matrix-bg {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: -1;
-      background: #05071e;
-    }
-
-    .container {
-      position: relative;
-      z-index: 1;
-      width: 100%;
-      max-width: 900px;
-      margin: auto;
-      padding: 20px;
-    }
-
-    .screen { display: none; }
-    .screen.active { display: block; }
-
-    h1 {
-      font-family: 'Orbitron', sans-serif;
-      color: var(--primary);
-    }
-
-    .btn {
-      background: var(--primary);
-      border: none;
-      padding: 12px 24px;
-      border-radius: 8px;
-      cursor: pointer;
-      font-size: 18px;
-      font-weight: bold;
-      color: #05071e;
-      transition: all 0.3s;
-    }
+    body { margin: 0; font-family: 'Exo 2', sans-serif; background: #05071e; color: #fff; overflow: hidden; }
+    .matrix-bg { position: fixed; top:0; left:0; width:100%; height:100%; z-index:-1; background:#05071e; }
+    .container { position: relative; z-index: 1; width: 100%; max-width: 900px; margin: auto; padding: 20px; }
+    .screen { display: none; } .screen.active { display: block; }
+    h1 { font-family: 'Orbitron', sans-serif; color: var(--primary); }
+    .btn { background: var(--primary); border: none; padding: 12px 24px; border-radius: 8px; cursor: pointer; font-size: 18px; font-weight: bold; color: #05071e; transition: all 0.3s; }
     .btn:hover { background: #00d0e6; }
-
-    .options-grid {
-      display: grid;
-      gap: 10px;
-      margin-top: 20px;
-    }
-
-    .option-btn {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      background: rgba(255,255,255,0.05);
-      border: 1px solid rgba(255,255,255,0.2);
-      padding: 12px;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: all 0.3s;
-      color: #fff;
-    }
+    .options-grid { display: grid; gap: 10px; margin-top: 20px; }
+    .option-btn { display: flex; align-items: center; justify-content: space-between; background: rgba(255,255,255,0.05); border: 1px solid rgba(255,255,255,0.2); padding: 12px; border-radius: 8px; cursor: pointer; transition: all 0.3s; color: #fff; }
     .option-btn:hover { background: rgba(0,243,255,0.2); }
-    .option-btn.correct {
-      border-color: #00ff88;
-      background: rgba(0,255,136,0.2);
-    }
-    .option-btn.incorrect {
-      border-color: #ff0033;
-      background: rgba(255,0,51,0.2);
-    }
-
-    .progress-bar {
-      width: 100%;
-      height: 12px;
-      background: rgba(255,255,255,0.1);
-      border-radius: 6px;
-      margin: 15px 0;
-      overflow: hidden;
-    }
-    .progress-fill {
-      height: 100%;
-      width: 0%;
-      background: var(--primary);
-      transition: width 0.5s;
-    }
-
-    .score-circle {
-      width: 200px;
-      height: 200px;
-      border-radius: 50%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      margin: 30px auto;
-      position: relative;
-      background: conic-gradient(var(--primary) 0%, var(--darker) 0%);
-      box-shadow: 0 0 30px rgba(0, 243, 255, 0.3);
-      transition: background 1s linear;
-    }
-    .score-value {
-      font-size: 36px;
-      font-weight: bold;
-    }
-
-    .feedback-message {
-      margin-top: 10px;
-      padding: 10px;
-      border-radius: 6px;
-      display: none;
-    }
-    .feedback-correct {
-      background: rgba(0,255,136,0.2);
-      border: 1px solid #00ff88;
-    }
-    .feedback-incorrect {
-      background: rgba(255,0,51,0.2);
-      border: 1px solid #ff0033;
-    }
-
-    /* ✅ Explanation styling */
-    #explanation-text {
-      margin-top: 12px;
-      padding: 10px;
-      border-left: 3px solid var(--primary);
-      background: rgba(255,255,255,0.05);
-      border-radius: 4px;
-      font-style: italic;
-      display: none;
-    }
+    .option-btn.correct { border-color: #00ff88; background: rgba(0,255,136,0.2); }
+    .option-btn.incorrect { border-color: #ff0033; background: rgba(255,0,51,0.2); }
+    .progress-bar { width: 100%; height: 12px; background: rgba(255,255,255,0.1); border-radius: 6px; margin: 15px 0; overflow: hidden; }
+    .progress-fill { height: 100%; width: 0%; background: var(--primary); transition: width 0.5s; }
+    .score-circle { width: 200px; height: 200px; border-radius: 50%; display: flex; flex-direction: column; align-items: center; justify-content: center; margin: 30px auto; position: relative; background: conic-gradient(var(--primary) 0%, var(--darker) 0%); box-shadow: 0 0 30px rgba(0, 243, 255, 0.3); transition: background 1s linear; }
+    .score-value { font-size: 36px; font-weight: bold; }
+    .feedback-message { margin-top: 10px; padding: 10px; border-radius: 6px; display: none; }
+    .feedback-correct { background: rgba(0,255,136,0.2); border: 1px solid #00ff88; }
+    .feedback-incorrect { background: rgba(255,0,51,0.2); border: 1px solid #ff0033; }
+    #explanation-text { margin-top: 12px; padding: 10px; border-left: 3px solid var(--primary); background: rgba(255,255,255,0.05); border-radius: 4px; font-style: italic; display: none; }
   </style>
 </head>
 <body>
   <canvas class="matrix-bg" id="matrixBg"></canvas>
-
   <div class="container">
-    <!-- Start Screen -->
     <div id="start-screen" class="screen active">
       <h1><i class="fas fa-robot"></i> Sentient AI</h1>
       <p>Welcome to the Sentient AI Quiz Challenge!</p>
       <button class="btn" onclick="startQuiz()">Begin Quiz</button>
     </div>
-
-    <!-- Quiz Screen -->
     <div id="quiz-screen" class="screen">
       <div class="progress-bar"><div id="progress-fill" class="progress-fill"></div></div>
       <h2 id="question-text"></h2>
@@ -170,8 +49,6 @@
       <p id="explanation-text"></p>
       <button id="next-btn" class="btn" onclick="nextQuestion()" disabled>Next</button>
     </div>
-
-    <!-- Result Screen -->
     <div id="result-screen" class="screen">
       <h1>Results</h1>
       <div class="score-circle" id="score-circle">
@@ -183,67 +60,57 @@
   </div>
 
   <script>
-    // Full quiz with 5 questions
     const quizData = [
       {
-  "questions": [
-    {
-      "question": "What is the primary function of an AI Agent within the Sentient ecosystem?",
-      "options": [
-        "To mine new cryptocurrency tokens.",
-        "To act as an autonomous, goal-oriented AI that can be trained and monetized by users.",
-        "To provide secure storage for digital assets.",
-        "To validate transactions on the blockchain."
-      ],
-      "correct": 1,
-      "explanation": "AI Agents are the core building blocks of Sentient. They can be specialized, trained on data, and used to perform tasks, with their creators earning rewards."
-    },
-    {
-      "question": "Which blockchain network is the Sentient platform primarily built on?",
-      "options": [
-        "Ethereum",
-        "Solana",
-        "Polygon",
-        "Bitcoin"
-      ],
-      "correct": 2,
-      "explanation": "Sentient is built on the Polygon network, leveraging its scalability and low transaction fees."
-    },
-    {
-      "question": "What is the primary purpose of the Sentient Marketplace?",
-      "options": [
-        "To trade NFTs.",
-        "To buy and sell computational power for AI training.",
-        "To facilitate the trading, leasing, and collaboration of AI Agents and their components (Models, Datasets, Prompts).",
-        "To serve as a decentralized exchange for cryptocurrencies."
-      ],
-      "correct": 2,
-      "explanation": "The Marketplace is a hub where users can monetize AI creations by selling or leasing them to others, including models, datasets, and prompts."
-    },
-    {
-      "question": "According to the blog, what problem is Sentient aiming to solve in the current AI landscape?",
-      "options": [
-        "The high cost of GPU hardware.",
-        "The centralization of AI power and profits among a few large corporations.",
-        "The lack of programming languages for AI development.",
-        "The environmental impact of AI models."
-      ],
-      "correct": 1,
-      "explanation": "Sentient aims to create a decentralized, open, user-owned AI ecosystem, countering the monopoly of large tech companies on AI development and profits."
-    },
-    {
-      "question": "What role does the PSI ($PSI) token play in the Sentient ecosystem?",
-      "options": [
-        "It is a stablecoin used for pricing AI services.",
-        "It is solely a governance token for voting on proposals.",
-        "It is used for payments, staking, incentivizing participation, and governing the platform.",
-        "It is a token used only for initial fundraising and has no further utility."
-      ],
-      "correct": 2,
-      "explanation": "The PSI token is the native utility token of Sentient, used for payments, staking, rewards, and governance participation."
-    }
-  ]
-}
+        question: "What is the primary function of an AI Agent within the Sentient ecosystem?",
+        options: [
+          "To mine new cryptocurrency tokens.",
+          "To act as an autonomous, goal-oriented AI that can be trained and monetized by users.",
+          "To provide secure storage for digital assets.",
+          "To validate transactions on the blockchain."
+        ],
+        correct: 1,
+        explanation: "AI Agents are the core building blocks of Sentient. They can be specialized, trained on data, and used to perform tasks, with their creators earning rewards."
+      },
+      {
+        question: "Which blockchain network is the Sentient platform primarily built on?",
+        options: ["Ethereum", "Solana", "Polygon", "Bitcoin"],
+        correct: 2,
+        explanation: "Sentient is built on the Polygon network, leveraging its scalability and low transaction fees."
+      },
+      {
+        question: "What is the primary purpose of the Sentient Marketplace?",
+        options: [
+          "To trade NFTs.",
+          "To buy and sell computational power for AI training.",
+          "To facilitate the trading, leasing, and collaboration of AI Agents and their components (Models, Datasets, Prompts).",
+          "To serve as a decentralized exchange for cryptocurrencies."
+        ],
+        correct: 2,
+        explanation: "The Marketplace is a hub where users can monetize AI creations by selling or leasing them to others, including models, datasets, and prompts."
+      },
+      {
+        question: "According to the blog, what problem is Sentient aiming to solve in the current AI landscape?",
+        options: [
+          "The high cost of GPU hardware.",
+          "The centralization of AI power and profits among a few large corporations.",
+          "The lack of programming languages for AI development.",
+          "The environmental impact of AI models."
+        ],
+        correct: 1,
+        explanation: "Sentient aims to create a decentralized, open, user-owned AI ecosystem, countering the monopoly of large tech companies on AI development and profits."
+      },
+      {
+        question: "What role does the PSI ($PSI) token play in the Sentient ecosystem?",
+        options: [
+          "It is a stablecoin used for pricing AI services.",
+          "It is solely a governance token for voting on proposals.",
+          "It is used for payments, staking, incentivizing participation, and governing the platform.",
+          "It is a token used only for initial fundraising and has no further utility."
+        ],
+        correct: 2,
+        explanation: "The PSI token is the native utility token of Sentient, used for payments, staking, rewards, and governance participation."
+      }
     ];
 
     let currentIndex = 0;
@@ -309,11 +176,8 @@
       }
 
       feedbackMessage.style.display = 'block';
-
-      // ✅ Always show explanation
       explanationText.textContent = q.explanation;
       explanationText.style.display = 'block';
-
       nextBtn.disabled = false;
     }
 
